# devops-workshop

02- API Calls to Gemini/: main.py  pyproject.toml
03-hugging-face/: app.py  main.py  pyproject.toml  summarizer.py  translator.py
05-Ollama/: file.ipynb  main.py  pyproject.toml  rag.py
