[project]
name = "03-hugging-face"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=1.22.0",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.1",
    "torch>=2.12.1",
    "transformers>=5.13.0",
]
